changed modal to take a fixed center position on mobile devices under 512px width

--- a/src/components/calendar/styles.css
+++ b/src/components/calendar/styles.css
@@ -9,8 +9,8 @@
 }
 
 .rbc-active {
-  background-color: #7945C2 !important;
-  /* background-color: #9245cf !important; new purple to be used when ui update is done*/ 
+  background-color: #7945c2 !important;
+  /* background-color: #9245cf !important; new purple to be used when ui update is done*/
   color: white !important;
 }
 
@@ -19,4 +19,17 @@
   position: fixed;
   width: 100%;
   height: 100%;
+}
+@media (max-width: 512px) {
+  .event-details {
+    display: block;
+    position: fixed;
+    top: 35vh;
+    right: 0;
+    left: 0;
+    margin-right: auto;
+    margin-left: auto;
+    /* give it dimensions */
+    width: 90%;
+  }
 }
